# sniptip

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: deploy.yml
src/: args.rs  lib.rs  main.rs
tests/: cli.rs
