[package]
name = "sniptip"
version = "0.1.2"
edition = "2021"
authors = ["Andres Osorio <af.osorio1341@gmail.com>"]
license = "MIT"
description = "A simple command line tool to create and search for snippets in your machine."
readme = "README.md"
repository = "https://github.com/anfelo/sniptip"
keywords = ["cli", "code-snippets", "command-line-utilities", "rust"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.1"
